# fun-shell

./: Cargo.toml  README.md
src/: main.rs
src/lib/: errors.rs  http_models.rs  mod.rs  request.rs
